--- a/WordSearch/Views/Base.lproj/Main.storyboard
+++ b/WordSearch/Views/Base.lproj/Main.storyboard
@@ -16,21 +16,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZm-kp-hDp">
-                                <rect key="frame" x="170" y="239" width="75" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="New Game"/>
-                                <connections>
-                                    <segue destination="hxW-lg-kAf" kind="show" id="bfO-ho-qjO"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTn-tR-BQ3">
-                                <rect key="frame" x="158" y="285" width="100" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Resume Game"/>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="SRF-II-OXA">
+                                <rect key="frame" x="157" y="437" width="100" height="76"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZm-kp-hDp">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                        <state key="normal" title="New Game"/>
+                                        <connections>
+                                            <segue destination="hxW-lg-kAf" kind="show" id="bfO-ho-qjO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTn-tR-BQ3">
+                                        <rect key="frame" x="0.0" y="46" width="100" height="30"/>
+                                        <state key="normal" title="Resume Game"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="SRF-II-OXA" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="64k-Wr-WIn"/>
+                            <constraint firstItem="SRF-II-OXA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="atR-D4-FoT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="E0w-3t-eXZ">
@@ -162,21 +169,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CFE-Wk-C7x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1785.5072463768117" y="129.91071428571428"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Gvo-rS-dTP">
-            <objects>
-                <viewController id="5g4-2j-c2t" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hCF-9x-ZWN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="DTW-Vf-fnh"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="A1L-QZ-zH7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2542" y="130"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="syA-IO-n51">
