--- a/WordSearch/Views/Base.lproj/LaunchScreen.storyboard
+++ b/WordSearch/Views/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Aro-qn-NVt">
+                                <rect key="frame" x="124" y="371" width="166" height="164"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Aro-qn-NVt" secondAttribute="height" multiplier="1:1" id="tqR-15-k0X"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Aro-qn-NVt" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="RPK-hl-aX3"/>
+                            <constraint firstItem="Aro-qn-NVt" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.4" id="jrg-ll-7zc"/>
+                            <constraint firstItem="Aro-qn-NVt" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="w6U-tf-0VO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -23,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+    </resources>
 </document>
